fix overflow

--- a/src/app/components/tooltip/tooltip.component.scss
+++ b/src/app/components/tooltip/tooltip.component.scss
@@ -9,7 +9,7 @@
   top: 0px;
   left: 0px;
   padding: 10px;
-  overflow: hidden;
+  overflow: clip;
   hr {
     width:100%;
   }
