--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,6 +5,7 @@
 }
 
 html, body { height: 100%; width: 100%; color:white;
+  overflow: clip;
   font-family: Roboto, sans-serif;
 font-size: 24px;}
 body { margin: 0}
